# rust-postgres-macros

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY  build.rs  parser.c  test.c  test.rs
src/: lib.rs  parser.c  parser.h
tests/: test.rs
tests/compile-fail/: execute.rs  sql.rs
tests/run-pass/: execute.rs  many_queries.rs  sql.rs
