[package]

name = "postgres_macros"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.1.4"
license = "MIT"
description = "A set of support macros for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-macros"

build = "build.rs"

[lib]

name = "postgres_macros"
path = "src/lib.rs"
plugin = true
test = false
