[package]
name = "postgres_macros"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.1.13"
license = "MIT/Apache-2.0"
description = "A set of support macros for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-macros"

build = "build.rs"

[lib]
plugin = true
test = false

[dev-dependencies]
compiletest_rs = "0.2"
